Version 1.0RC1/CVS+dev (?? ??? 2004)
  - Fixed Bug 1109323: Error in LDAP get_admins function
  - Patch 1113315: Change maxsize of username from 20 to 25 in
    admin add user form (db was already 25)
  - Patch 1113319: fixed finding of username for http authentication
    (Different versions of PHP store it in different variables.)
  - Fixed bug 1061746: layout issues with view_d.php
  - If php.ini setting for "file_uploads" is not enabled, then indicate
    this on the import page (import.php).
  - Streamlined layers.php & made layers only be displayed when layers are
  enabled
  - Updated Admin docs for content & xhtml/css validity
  - Adding Styling docs (still under construction.. feel free to contribute)
  - Adding title attribute to links
  - Cleaning up html for editing layers & streamlining GUI
  - Making code easier to read & fixing '&' to read '&amp;' in url
  - Updated reading of settings.php in config.php to strip off white
    space.  Added new function, dieMiserableDeath(), that can be called
    before functions.php is loaded.  We will typlically use this function
    when there is a fatal error in reading settings.php or a db connect
    problem.  (It will show a link to the Troubleshooting section of the
    SysAdmin Guide, which will hopefully cut down on some of the help/support
    requests.)
  - Fixed bug: we were opening two db connections (one in validate.php and
    then another in connect.php) for web-based user authentication.  (Oops)
  - Added database sanity check (can we access webcal_config table) that
    was being skipped for web-based user authentication.
  - Updated default color scheme (modified values in tables-*.sql).
    (Will only apply to new installs.)
  - Fixed bug: vCal import was completely broken (looking for type 'VCAL' when
    for was using 'vcal')
  - Added patch 1098507: Fixed problem using htmlarea where event description
    would not be saved.